[package]
name = "hetuflow-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "hetuflow-server"
path = "bin/hetuflow-server.rs"

[dependencies]
hetuflow-core = { workspace = true, features = [
  "with-db",
  "with-cli",
  "with-openapi",
] }
fusion-common = { workspace = true, features = ["with-uuid"] }
fusion-core = { workspace = true, features = ["with-uuid", "with-openapi", "with-logforth"] }
fusion-web = { workspace = true, features = ["with-uuid", "with-openapi"] }
fusion-db = { workspace = true, features = ["with-postgres", "with-uuid"] }
fusionsql = { workspace = true, features = ["with-uuid", "with-openapi"] }
sqlx = { workspace = true, features = [
  "runtime-tokio",
  "chrono",
  "json",
  "postgres",
  "uuid",
  "macros",
] }
sea-query = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
mea = { workspace = true }
futures-util = { workspace = true }
josekit = { workspace = true }
log = { workspace = true }
logforth = { workspace = true }
fastrace = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true, features = ["ws"] }
axum-extra = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
garde = { workspace = true }
axum-valid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
croner = { workspace = true }
duration-str = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
