[package]
name = "hetumind-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
# workspace = true

[dependencies]
hetumind-core = { workspace = true, features = ["with-db"] }
fusion-common = { workspace = true }
fusion-core = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
dirs = "6"
uuid = { workspace = true }
fusionsql = { workspace = true }

[dev-dependencies]
tempfile = "3"
