[package]
name = "hetumind-context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
fusion-corelib = { workspace = true }
hetumind-core = { workspace = true, features = ["with-db"] }
fusion-common = { workspace = true, features = ["with-uuid"] }
fusion-core = { workspace = true, features = ["with-uuid", "modelsql"] }
fusion-web = { workspace = true }

log = { workspace = true }
thiserror = { workspace = true }
modelsql = { workspace = true }
http = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
mea = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
