[package]
name = "hetumind-context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
fusion-common = { workspace = true, features = ["with-uuid"] }
fusion-core = { workspace = true, features = ["with-uuid", "fusionsql"] }
fusion-web = { workspace = true }
hetumind-core = { workspace = true, features = ["with-db"] }
tokio = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
fusionsql = { workspace = true }
http = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
mea = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
