[package]
name = "hetumind-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[lints]
workspace = true

[features]
with-db = ["sqlx", "sea-query", "modelsql", "modelsql-core/with-sea-query"]

[dependencies]
ultimate-common = { workspace = true, features = ["with-uuid"] }
config = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
typed-builder = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
jsonpath-rust = { workspace = true }
nom = { workspace = true }
ahash = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
duration-str = { workspace = true }
croner = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true, optional = true }
sea-query = { workspace = true, optional = true }
modelsql = { workspace = true, optional = true }
modelsql-core = { workspace = true, features = ["with-uuid"] }
dashmap = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }
rand = { workspace = true }
