[package]
name = "hetumind-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[lints]
workspace = true

[features]
with-db = ["sqlx", "sea-query", "fusionsql", "fusionsql-core/with-sea-query"]

[dependencies]
fusion-common = { workspace = true, features = ["with-uuid"] }
semver = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
serde_json_path = { workspace = true }
nom = { workspace = true }
ahash = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
duration-str = { workspace = true }
croner = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
petgraph = { workspace = true }
num_cpus = { workspace = true }
sqlx = { workspace = true, optional = true }
sea-query = { workspace = true, optional = true }
fusionsql = { workspace = true, optional = true }
fusionsql-core = { workspace = true, features = ["with-uuid"] }
dashmap = { workspace = true }
content_inspector = "0.2"
mime_guess = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }
rand = { workspace = true }
