[package]
name = "hetumind-docs"
description = "河图智思项目文档构建工具"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
mdbook = { workspace = true }
mdbook-mermaid = { workspace = true }
