[package]
name = "hetumind-nodes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = true

[lints]
workspace = true

[dependencies]
ultimate-common = { workspace = true }
ultimate-core = { workspace = true }
hetumind-core = { workspace = true }
hetumind-context = { workspace = true }

# 网络请求
reqwest = { workspace = true }

# 异步支持
async-trait = { workspace = true }
tokio = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 错误处理
thiserror = { workspace = true }

# 日志
log = { workspace = true }

# 其他工具
ahash = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
