[package]
name = "hetumind-nodes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = true

[lints]
workspace = true

[dependencies]
fusion-common = { workspace = true, features = ["with-uuid"] }
fusion-core = { workspace = true, features = ["with-uuid"] }
hetumind-core = { workspace = true }
hetumind-context = { workspace = true }

# network
reqwest = { workspace = true }

# async & concurrency
async-trait = { workspace = true }
tokio = { workspace = true }

# ser & deser
serde = { workspace = true }
serde_json = { workspace = true }

# misc
thiserror = { workspace = true }
log = { workspace = true }
ahash = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
croner = { workspace = true }
duration-str = { workspace = true }
chrono = { workspace = true }
opendal = { workspace = true }

# file processing
mime_guess = { workspace = true }
content_inspector = { workspace = true }
glob = { workspace = true }
