[package]
name = "hetumind-nodes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = true

[lints]
workspace = true

[dependencies]
fusion-common = { workspace = true, features = ["with-uuid"] }
fusion-core = { workspace = true, features = ["with-uuid"] }
fusion-ai = { workspace = true }
hetumind-core = { workspace = true }
hetumind-context = { workspace = true }
rig-core = { workspace = true }

# network
reqwest = { workspace = true }

# async & concurrency
async-trait = { workspace = true }
tokio = { workspace = true }

# ser & deser
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_path = { workspace = true }

# misc
thiserror = { workspace = true }
log = { workspace = true }
ahash = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
croner = { workspace = true }
duration-str = { workspace = true }
chrono = { workspace = true }
opendal = { workspace = true }
once_cell = "1.19"
rand = { workspace = true }

# file processing
mime_guess = { workspace = true }
content_inspector = { workspace = true }
glob = { workspace = true }

# image processing
image = "0.25"
imageproc = "0.25"
rusttype = "0.9"
base64 = "0.22"

# email processing
lettre = { version = "0.11", default-features = false, features = ["tokio1", "rustls-tls", "tokio1-rustls", "builder", "smtp-transport"] }

# async utilities
mea = { workspace = true}
futures = { workspace = true }
