[package]
name = "hetumind"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[features]
with-redis = []

[dependencies]
# -- hetumind
hetumind-core = { workspace = true, features = ["with-db"] }
hetumind-context = { workspace = true }
hetumind-nodes = { workspace = true }

fusion-common = { workspace = true, features = ["with-uuid"] }
fusion-core = { workspace = true, features = ["with-uuid"] }

async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
bytes = { workspace = true }
ahash = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
log = { workspace = true }
logforth = { workspace = true }

# -- db
fusion-db = { workspace = true, features = ["with-postgres", "with-uuid"] }
modelsql = { workspace = true, features = [
  "with-postgres",
  "with-uuid",
  "with-rust_decimal",
  "with-pgvector",
  "with-ilike",
] }
sqlx = { workspace = true, features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "json",
  "chrono",
  "rust_decimal",
] }
sea-query = { workspace = true }
sea-query-binder = { workspace = true, features = [
  "sqlx-postgres",
  "postgres-array",
  "with-uuid",
  "with-json",
  "with-chrono",
  "with-rust_decimal",
] }

# -- Web
fusion-web = { workspace = true, features = ["with-uuid"] }
http = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }

# -- tokio & async
tokio = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }

# -- tracing
metrics = { workspace = true }
fastrace = { workspace = true }

# -- scheduler & cron
tokio-cron-scheduler = { workspace = true }
croner = { workspace = true }

# -- serde
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
axum-test = { workspace = true }
json-patch = { workspace = true }
insta = { workspace = true }
once_cell = { workspace = true }
test-context = { workspace = true }
tokio = { workspace = true }
tower-cookies = { workspace = true }
