[package]
name = "fusion-ai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[lints]
workspace = true

[dependencies]
fusion-common = { workspace = true }
tokio = { workspace = true }
rig-core = { workspace = true }
graph-flow = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }
