[package]
name = "fusion-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
publish = true
readme = "README.md"

[lints.rust]
unsafe_code = "allow"

[features]
with-uuid = ["uuid"]
with-ulid = ["ulid"]
with-openapi = ["utoipa"]
with-db = ["sqlx", "sea-query"]
with-chrono = []
# WASM compatibility features
with-wasm = ["getrandom", "getrandom/wasm_js", "js-sys", "wasm-bindgen"]

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hmac.workspace = true
base64ct.workspace = true
base16ct.workspace = true
ahash.workspace = true
chrono.workspace = true
duration-str.workspace = true
rand = { workspace = true }
regex.workspace = true
log = { workspace = true }
uuid = { workspace = true, optional = true }
ulid = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
sea-query = { workspace = true, optional = true }
libc = { workspace = true }
windows-sys = { workspace = true }
# WASM dependencies
getrandom = { version = "0.3", default-features = false, optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
rand_wasm = { package = "rand", version = "0.9", optional = true }

[dev-dependencies]
dotenvy.workspace = true
