[package]
name = "fusion-corelib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
