[package]
name = "fusion-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
publish = true

[lints]
workspace = true

[features]
with-postgres = ["modelsql/with-postgres"]
with-sqlite = ["modelsql/with-sqlite"]
with-uuid = ["dep:uuid", "modelsql/with-uuid"]

[dependencies]
fusion-corelib.workspace = true
fusion-common.workspace = true
fusion-core = { workspace = true, features = ["modelsql"] }
modelsql = { workspace = true }
serde.workspace = true
serde_json.workspace = true
log.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid = { workspace = true, optional = true }
config = { workspace = true }
sqlx.workspace = true
sea-query.workspace = true
sea-query-binder.workspace = true
tonic = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace = true
logforth.workspace = true
