[package]
name = "fusion-flow-broker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true


[lints]
workspace = true

[[bin]]
name = "fusion-flow-broker"
path = "src/bin/fusion-flow-broker.rs"

[features]
default = ["tonic-reflection"]
tonic-reflection = ["dep:tonic-reflection", "ultimate-grpc/tonic-reflection"]
tonic-web = ["dep:tonic-web", "ultimate-grpc/tonic-web"]
opentelemetry = ["ultimate/opentelemetry"]

[dependencies]
# -- ultimates
ultimate-common = { workspace = true, features = ["prost"] }
ultimate-api = { workspace = true }
ultimate = { workspace = true }

# -- db
ultimate-db = { workspace = true, features = ["tonic"] }
sqlx = { workspace = true }
sea-query = { workspace = true }
sea-query-binder = { workspace = true }

# -- grpc
ultimate-grpc = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true, optional = true }
tonic-web = { workspace = true, optional = true }

# -- fusions
fusiondata = { workspace = true }
fusiondata-context = { workspace = true }
fusion-flow-api = { workspace = true, features = ["with-db"] }
fusion-flow = { workspace = true }

# -- misc
config = { workspace = true }
chrono = { workspace = true }
# chrono-tz = { workspace = true }
duration-str = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
uuid = { workspace = true }
ulid = { workspace = true }
croner = { workspace = true }

# -- async
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# -- tracing
tracing = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
